# fastapi-basics

./: .gitignore  README.md  pyproject.toml
AI/: main.py  model.py
AI/AI APIs/: main.py  utils.py
async_db_operations/: app.py
async_operations/: bg.py
async_programming/: demo.py  ext_api.py  main.py
basics/: main.py
book/: test.py
book/chapter_10/: app.py  database.py  settings.py
book/chapter_11/: numpy_pandas.ipynb  scikit-learn.ipynb
book/chapter_12/: async_sync.py  caching.py  loadingmodel.py  model.joblib  modeldumping.py  prediction_endpoint.py
book/chapter_13/: object_detection.py  rest_endpoint.py
book/chapter_14/: api.py  text_to_image.py  worker.py
book/chapter_15/: app.py  contexts.py  custom_metrics.py  logger.py  logs_1.py  metrics_1.py  sinks.py  worker.py  worker_custom.py
book/chapter_3/: main.py
book/chapter_4/: instance-from-subclass.py  models.py  partial_update.py
book/chapter_5/: main.py
book/chapter_6/: models.py  schemas.py
book/chapter_7/: app.py  main.py
book/chapter_8/: broadcast.py  dependencies.py
book/chapter_9/: app.py  app_post.py  app_post_test.py  app_test.py  database_test.py  ext_api.py  ext_api_test.py  fixtures.py  fixtures_test.py  pytest_parametrize.py  test.py  test_with_pytest.py  ws.py  ws_test.py
deployment/: config.txt  main.py
security/: main.py
testing/: create_db.py
testing/app/: database.py  external_api.py  main.py  models.py  routes.py
testing/tests/: test_external_api.py  test_main.py  test_websocket.py
websockets/: broadcast.py  chat.py  practice.py  sock.py
(+47 files in other folders)
