[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "aiosqlite>=0.21.0",
    "aiosqlite3>=0.3.0",
    "asyncio>=4.0.0",
    "diffusers>=0.35.2",
    "dramatiq[redis]>=1.18.0",
    "fastapi>=0.118.0",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "minio>=7.2.18",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
    "transformers[torch]>=4.57.1",
    "uvicorn[standard]>=0.37.0",
]
